# BScEmbeddedLocalization

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_and_run.sh  compile_commands.json  debug.sh  fr_compile_and_run.sh  kandi3d.kdev4  kandi3d.sublime-project  kandi3d.sublime-workspace  main.cpp  performance_evaluations.txt  test_live_disparity.py
.cache/clangd/index/: camera_module.h.C50E16CD8F948161.idx  main.cpp.17F844BC724F99A0.idx
.kdev4/: kandi3d.kdev4
assets/: calculate_intrinsics.py  capture_camera_frames.py
src/: camera_module.cpp  camera_module.h  constants.h  debug_functions.h  detector.cpp  detector.h  features.h  frame.h  localization_graph.cpp  localization_graph.h  old_detector.h  point_receiver.h  point_streamer.h  timer.h  utilities.h
